[chromium] MediaStream API: Moving the mock create* WebRTC calls into a shadow Platform class https://bugs.webkit.org/show_bug.cgi?id=86215

Reviewed by Adam Barth.

Adding a shadow Platform object that is used to override some WebKit::Platform funtions to
instead create mock objects. No actual mock objects created yet.

* DumpRenderTree/DumpRenderTree.gypi:
* DumpRenderTree/chromium/DumpRenderTree.cpp:
(WebKitSupportTestEnvironment::WebKitSupportTestEnvironment):
* DumpRenderTree/chromium/MockWebKitPlatformSupport.cpp: Copied from Tools/DumpRenderTree/chromium/config.h.
(MockWebKitPlatformSupport::create):
(MockWebKitPlatformSupport::MockWebKitPlatformSupport):
(MockWebKitPlatformSupport::cryptographicallyRandomValues):
(MockWebKitPlatformSupport::createMediaStreamCenter):
* DumpRenderTree/chromium/MockWebKitPlatformSupport.h: Copied from Tools/DumpRenderTree/chromium/config.h.
(MockWebKitPlatformSupport):
* DumpRenderTree/chromium/config.h:


Canonical link: https://commits.webkit.org/109453@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@122995 268f45cc-cd09-0410-ab3c-d52691b4dbfc